# BFR

./: LICENSE  README.md  pyproject.toml  requirements.txt
bfr/: bgfr.py  kulsif.py  nlbgfr.py
experiments/dmbt1/real/: da.py  da_results.py  impute.py
experiments/dmbt1/simulated/: da.py  da_metrics.py  imputation_metrics.py  impute.py
experiments/microbiome/: data_loader.py  get_data.R  job.sh  plot.py  run.py  scratch.py  t2d_meta.csv  t2d_rel.csv
experiments/microbiome/results/0/: metrics.csv
experiments/microbiome/results/1/: metrics.csv
experiments/microbiome/results/10/: metrics.csv
experiments/microbiome/results/11/: metrics.csv
experiments/microbiome/results/12/: metrics.csv
experiments/microbiome/results/13/: metrics.csv
experiments/normal/: icsa.py  run.py  run2.py
experiments/spherical/: icsa.py  plot.py  run.py
experiments/toy_normal/: run.py
experiments/toy_spherical/: run.py
experiments_old/: blr.py  dre.py
experiments_old/dmbt1/: imputation_metrics.py  impute.py
experiments_old/dmbt1/real/: da.py  da_results.py  impute.py
experiments_old/dmbt1/simulated/: da.py  da_metrics.py  gen_data.py  imputation_metrics.py  impute.py
experiments_old/normal/: run.py  run_cv.py
experiments_old/spherical/: run.py  run_cv.py
nlbgfr/: bfr.py  nlbr.py
pyloseq/: __init__.py  pyloseq.py  taxonomy.py  zinb.py
pyloseq/da/: clrt.py  lm.py  permuspliner.py  tdirmult.py  zinb.py
utils/kernels/: laplacian.py  matern.py  squared_exponential.py
utils/squared_metrics/: __init__.py  binary.py  compositional.py  euclidean.py  spherical.py
(+24 files in other folders)
